hphp/hack/test/typecheck/null_check_strict3.php
<?hh // strict

function f(?string $x, int $y): void {
  if ($y) {
  }
  $z = $x ?: 'bar';
}
